 2010-12-20 07:27  dimitr 
   M src/jrd/Optimizer.cpp
Fixed CORE-3283: Bad plan with using LEFT OUTER JOIN in sub-select. Compilation is not tested.

 2010-11-24 15:20  dimitr 
   M src/jrd/dyn_def.epp
Fixed another incarnation of the "request depth exceeded" error, this time it prevents more than 128 expression indices from being created. Reported privately by Timo Partanen.

 2010-11-11 07:50  alexpeshkoff 
   M builds/install/arch-specific/linux/misc/firebird.init.d.debian.in
Added LSB header

 2010-11-08 16:17  alexpeshkoff 
   M src/jrd/svc.cpp
Backported fix for CORE-3220: isc_info_svc_get_users returns error message in the result cluster

 2010-11-08 10:30  dimitr 
   M src/jrd/opt.cpp
Fixed an old error which handles aggregates wrongly. So far it seems harmless for versions prior to v3.0 where it has been fixed, but let's be on the safe side.

 2010-10-31 08:54  dimitr 
   M src/dsql/dsql.cpp
Fixed CORE-3205: isc_dsql_exec_immed2() doesn't return error codes isc_stream_eof and isc_sing_select_err.

 2010-10-28 18:14  dimitr 
   M src/remote/server.cpp
Fixed CORE-3202: execute_immediate API call family may crash the remote server.

 2010-10-19 13:28  alexpeshkoff 
   M src/jrd/sqz.cpp
Backported fix for CORE-3148: possible segfault in SQZ_apply_differences

 2010-10-15 07:52  alexpeshkoff 
   M src/jrd/sqz.cpp
Backported fix for CORE-3115: Bugs in the internal record compression routines

 2010-09-24 11:33  dimitr 
   M src/jrd/gds.cpp
Fixed unregistered error in the BLR printer output.

 2010-09-18 06:52  dimitr 
   M src/jrd/vio.cpp
Fixed CORE-3137: Partial rollback is possible for a selectable procedure modifying data.

 2010-08-26 10:52  alexpeshkoff 
   M src/jrd/why.cpp
Fixed CORE-3117: After an error in GDS_CLOSE_BLOB() blob handle becomes invalid

 2010-07-09 11:33  alexpeshkoff 
   M src/jrd/isc_sync.cpp
Backported fix for CORE-3067: Objects not unmapped when shared memory is closed

 2010-07-08 10:44  dimitr 
   M src/common/classes/fb_pair.h