@@ -1,3 +1,7 @@
+ 2011-01-12 10:56  dimitr 
+   M doc/license/README.license.usage.txt
+Corrected the license URLs.
+
  2010-12-20 07:27  dimitr 
    M src/jrd/Optimizer.cpp
 Fixed CORE-3283: Bad plan with using LEFT OUTER JOIN in sub-select. Compilation is not tested.
